tests/baselines/reference/ClassAndModuleThatMergeWithModulesExportedGenericFunctionAndNonGenericClassStaticFunctionOfTheSameName.errors.txt
==== tests/cases/compiler/ClassAndModuleThatMergeWithModulesExportedGenericFunctionAndNonGenericClassStaticFunctionOfTheSameName.ts (3 errors) ====
    class clodule<T> {
        id: string;
        value: T;
    
        static fn(id: string) { }
        ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! ClassAndModuleThatMergeWithModulesExportedGenericFunctionAndNonGenericClassStaticFunctionOfTheSameName.ts(5,5): error TS2149: Overload signature is not compatible with function definition:
!!! 	Call signature expects 1 or fewer parameters.
        ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! ClassAndModuleThatMergeWithModulesExportedGenericFunctionAndNonGenericClassStaticFunctionOfTheSameName.ts(5,5): error TS2151: Overload signatures must all be exported or not exported.
    }
    
    module clodule {
        // error: duplicate identifier expected
        export function fn<T>(x: T, y: T): T {
                        ~~
!!! ClassAndModuleThatMergeWithModulesExportedGenericFunctionAndNonGenericClassStaticFunctionOfTheSameName.ts(10,21): error TS2000: Duplicate identifier 'fn'. Additional locations:
!!! 	ClassAndModuleThatMergeWithModulesExportedGenericFunctionAndNonGenericClassStaticFunctionOfTheSameName.ts(5,5)
            return x;
        }
    }
    
    